photo page and css

--- a/photo.html
+++ b/photo.html
@@ -21,7 +21,71 @@
     <!--Link CSS-->
     <link rel="stylesheet" href="src/style.css" />
 
-    <title>Photos of Croisasnts</title>
+    <title>Photos of Croissants</title>
   </head>
-  <body></body>
+  <body>
+    <h1 class="croissant-title">Croissants</h1>
+    <hr />
+    <br />
+    <div class="container">
+      <img
+        src="src/images/croissant-1.jpg"
+        alt="picture of croissants"
+        class="
+          img-fluid
+          w-50
+          d-block
+          m-auto
+          rounded-3
+          border border-5
+          photo-page-pictures
+        "
+      />
+      <br />
+      <img
+        src="src/images/croisant-2.jpg"
+        alt=""
+        class="
+          img-fluid
+          w-50
+          d-block
+          m-auto
+          rounded-3
+          border border-5
+          photo-page-pictures
+        "
+      />
+      <br />
+      <img
+        src="src/images/croissant-3.jpg"
+        alt="pictures of croissants"
+        class="
+          img-fluid
+          w-50
+          d-block
+          m-auto
+          rounded-3
+          border border-5
+          photo-page-pictures
+        "
+      />
+    </div>
+    <br />
+    <div class="containter-btn text-center">
+      <button class="more-link-btn">
+        <a href="index.html" target="_blank">Home</a>
+      </button>
+      <button class="more-link-btn">
+        <a href="contact.html" target="_blank">Contact Us</a>
+      </button>
+    </div>
+    <br />
+    <br />
+    <footer class="text-center">
+      <a href="https://github.com/jordanroberson-codes" target="_blank"
+        >Coded</a
+      >
+      by Jordan Roberson
+    </footer>
+  </body>
 </html>
