added border to pictures and links to picture source

--- a/photo.html
+++ b/photo.html
@@ -28,47 +28,64 @@
     <hr />
     <br />
     <div class="container">
-      <img
-        src="src/images/croissant-1.jpg"
-        alt="picture of croissants"
-        class="
-          img-fluid
-          w-50
-          d-block
-          m-auto
-          rounded-3
-          border border-5
-          photo-page-pictures
-        "
-      />
+      <a
+        href="https://www.pexels.com/photo/croissant-and-coffee-890515/"
+        target="_blank"
+      >
+        <img
+          src="src/images/croissant-1.jpg"
+          alt="picture of croissants"
+          class="
+            croissant-pics
+            img-fluid
+            w-50
+            d-block
+            m-auto
+            rounded-3
+            border border-5
+            photo-page-pictures
+          "
+      /></a>
+
       <br />
-      <img
-        src="src/images/croisant-2.jpg"
-        alt=""
-        class="
-          img-fluid
-          w-50
-          d-block
-          m-auto
-          rounded-3
-          border border-5
-          photo-page-pictures
-        "
-      />
+      <a
+        href="https://www.pexels.com/photo/food-france-morning-breakfast-2135/"
+        target="_blank"
+      >
+        <img
+          src="src/images/croisant-2.jpg"
+          alt=""
+          class="
+            croissant-pics
+            img-fluid
+            w-50
+            d-block
+            m-auto
+            rounded-3
+            border border-5
+            photo-page-pictures
+          "
+        />
+      </a>
       <br />
-      <img
-        src="src/images/croissant-3.jpg"
-        alt="pictures of croissants"
-        class="
-          img-fluid
-          w-50
-          d-block
-          m-auto
-          rounded-3
-          border border-5
-          photo-page-pictures
-        "
-      />
+      <a
+        href="https://www.pexels.com/photo/black-pitcher-on-table-2130166/"
+        target="_blank"
+      >
+        <img
+          src="src/images/croissant-3.jpg"
+          alt="pictures of croissants"
+          class="
+            croissant-pics
+            img-fluid
+            w-50
+            d-block
+            m-auto
+            rounded-3
+            border border-5
+            photo-page-pictures
+          "
+      /></a>
     </div>
     <br />
     <div class="containter-btn text-center">
