added contact page, skeleton JS page, adjusted CSS

--- a/contact.html
+++ b/contact.html
@@ -24,5 +24,55 @@
 
     <title>Contact Page</title>
   </head>
-  <body></body>
+  <body>
+    <h1 class="croissant-title">Contact Us @ Croissants</h1>
+    <div class="container">
+      <div class="contact">
+        <div class="mb-3">
+          <label for="firstName" class="form-label">First Name</label>
+          <input
+            type="text"
+            class="form-control"
+            id="firstName"
+            placeholder=""
+          />
+          <label for="lastName" class="form-label">Last Name</label>
+          <input
+            type="text"
+            class="form-control"
+            id="lastName"
+            placeholder=""
+          />
+          <label for="exampleFormControlInput1" class="form-label"
+            >Email address</label
+          >
+          <input
+            type="email"
+            class="form-control"
+            id="exampleFormControlInput1"
+            placeholder="name@example.com"
+          />
+        </div>
+        <div class="mb-3">
+          <label for="exampleFormControlTextarea1" class="form-label"
+            >Send us your thoughts, comments, concerns! We would love to hear
+            from you!</label
+          >
+          <textarea
+            class="form-control"
+            id="exampleFormControlTextarea1"
+            rows="3"
+          ></textarea>
+        </div>
+      </div>
+      <div class="containter-btn text-center">
+        <button id="submit-btn">Submit</button>
+
+        <button class="more-link-btn">
+          <a href="index.html" target="_blank">Home</a>
+        </button>
+      </div>
+    </div>
+    <script src="app.js"></script>
+  </body>
 </html>
